[gd_scene load_steps=6 format=2]

[ext_resource path="res://Sprites/Goomba/beetle_walk.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Goomba.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 23, 23 )

[sub_resource type="Animation" id=3]
resource_name = "GoombaWalkAnim"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("GoombaSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4 ]
}

[sub_resource type="RayShape2D" id=2]
length = 6.0

[node name="GoombaBody" type="KinematicBody2D" groups=["enemy"]]
collision_layer = 4
collision_mask = 9
script = ExtResource( 2 )
moveSpeed = 100.0

[node name="GoombaSprite" type="Sprite" parent="."]
scale = Vector2( 0.5, 0.5 )
z_index = 1
texture = ExtResource( 1 )
hframes = 5
frame = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1, 5 )
z_index = 2
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/GoombaWalkAnim = SubResource( 3 )

[node name="RightWallChecker" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 9

[node name="CollisionShape2D" type="CollisionShape2D" parent="RightWallChecker"]
position = Vector2( 35, 0 )
shape = SubResource( 2 )

[node name="LeftWallChecker" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 9

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeftWallChecker"]
position = Vector2( -35, 0 )
shape = SubResource( 2 )

[node name="RightGroundChecker" type="Area2D" parent="."]
position = Vector2( 0, 35 )
collision_layer = 0
collision_mask = 9

[node name="CollisionShape2D" type="CollisionShape2D" parent="RightGroundChecker"]
position = Vector2( 35, 0 )
shape = SubResource( 2 )

[node name="LeftGroundChecker" type="Area2D" parent="."]
position = Vector2( 0, 35 )
collision_layer = 0
collision_mask = 9

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeftGroundChecker"]
position = Vector2( -35, 0 )
shape = SubResource( 2 )

[connection signal="body_entered" from="RightWallChecker" to="." method="_on_RightWallChecker_body_entered"]
[connection signal="body_entered" from="LeftWallChecker" to="." method="_on_LeftWallChecker_body_entered"]
[connection signal="body_exited" from="RightGroundChecker" to="." method="_on_RightGroundChecker_body_exited"]
[connection signal="body_exited" from="LeftGroundChecker" to="." method="_on_LeftGroundChecker_body_exited"]
